--- a/app/src/main/res/layout/empty_layout.xml
+++ b/app/src/main/res/layout/empty_layout.xml
@@ -2,6 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/emptyLayout_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="8dp"
+        android:background="#F44336">
+
+        <!--        <ScrollView-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent">-->
+
+        <!--            <ScrollView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content">-->
+
+        <!--                <LinearLayout-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="match_parent"-->
+        <!--                    android:background="#9C27B0"-->
+        <!--                    android:orientation="vertical">-->
+
+        <!--                    <FrameLayout-->
+        <!--                        android:layout_width="match_parent"-->
+        <!--                        android:layout_height="500dp"-->
+        <!--                        android:background="#E91E63">-->
+
+        <!--                    </FrameLayout>-->
+        <!--                </LinearLayout>-->
+        <!--            </ScrollView>-->
+        <!--        </ScrollView>-->
+
+    </FrameLayout>
 </LinearLayout>
