--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -78,9 +78,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:maxLines="2"
+                        android:ellipsize="end"
+                        android:singleLine="true"
                         style="@style/CaptionStyle"
-                        android:text="Name1" />
+                        android:text="The Lord of the Rings: The Return of the King" />
                 </LinearLayout>
 
                 <LinearLayout
