--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -107,7 +107,9 @@
         app:handleDrawable="@drawable/fast_scroll_thumb"
         app:handleHeight="40dp"
         app:handleWidth="30dp"
+        app:trackMarginStart="5dp"
         app:trackMarginEnd="20dp"
+        app:handleVisibilityDuration="1500"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
