--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -98,6 +98,12 @@
             android:id="@+id/fastScroller"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:handleDrawable="@drawable/fast_scroll_thumb"
+            app:handleHeight="40dp"
+            app:handleWidth="30dp"
+            app:trackMarginStart="5dp"
+            app:trackMarginEnd="20dp"
+            app:handleVisibilityDuration="1500"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.recyclerview.widget.RecyclerView
