--- a/app/src/main/res/layout/scroll_gallery_view.xml
+++ b/app/src/main/res/layout/scroll_gallery_view.xml
@@ -20,17 +20,26 @@
         android:layout_marginBottom="15dp"
         android:textColor="@android:color/white" />
 
-    <TextView
+    <LinearLayout
         android:id="@+id/customImageDescription"
-        style="@style/TextWithShadow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="95dp"
-        android:text="15.04.2000\nFinn\nGeburtstag"
-        android:textStyle="bold" />
+        android:orientation="vertical" />
+<!--    <TextView-->
+<!--        android:id="@+id/customImageDescription"-->
+<!--        style="@style/TextWithShadow"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginBottom="95dp"-->
+<!--        android:text="15.04.2000\nFinn\nGeburtstag"-->
+<!--        android:textStyle="bold" />-->
 
     <HorizontalScrollView
         android:id="@+id/thumbnails_scroll_view"
