--- a/app/src/main/res/layout/dialog_advanced_search_video.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_video.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="8dp"
-            android:text="Übersicht"
+            android:text="Bewertung"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/dialog_advancedSearch_range"
+                android:id="@+id/dialog_advancedSearch_video_range"
                 style="@style/TextButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
             android:layout_marginBottom="8dp">
 
             <SeekBar
-                android:id="@+id/dialog_advancedSearch_singleBar"
+                android:id="@+id/dialog_advancedSearch_video_singleBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -63,7 +63,7 @@
                 android:progressTint="@color/colorTransparent" />
 
             <com.innovattic.rangeseekbar.RangeSeekBar
-                android:id="@+id/dialog_advancedSearch_rangeBar"
+                android:id="@+id/dialog_advancedSearch_video_rangeBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
@@ -115,14 +115,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/dialog_advancedSearch_viewed_text"
+                android:id="@+id/dialog_advancedSearch_video_viewed_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 tools:text="04.10.2020 - 12.01.2021" />
 
             <Button
-                android:id="@+id/dialog_advancedSearch_viewed_change"
+                android:id="@+id/dialog_advancedSearch_video_viewed_change"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -148,13 +148,13 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/dialog_advancedSearch_viewed_since_edit_layout"
+                    android:id="@+id/dialog_advancedSearch_video_viewed_since_edit_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/dialog_advancedSearch_viewed_since_edit"
+                        android:id="@+id/dialog_advancedSearch_video_viewed_since_edit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Vor"
@@ -163,7 +163,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Spinner
-                    android:id="@+id/dialog_advancedSearch_viewed_since_unit"
+                    android:id="@+id/dialog_advancedSearch_video_viewed_since_unit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -179,13 +179,13 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/dialog_advancedSearch_viewed_duration_edit_layout"
+                    android:id="@+id/dialog_advancedSearch_video_viewed_duration_edit_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/dialog_advancedSearch_viewed_duration_edit"
+                        android:id="@+id/dialog_advancedSearch_video_viewed_duration_edit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Dauer"
@@ -194,7 +194,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Spinner
-                    android:id="@+id/dialog_advancedSearch_viewed_duration_unit"
+                    android:id="@+id/dialog_advancedSearch_video_viewed_duration_unit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -235,14 +235,14 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dialog_advancedSearch_length_min_edit_layout"
+                android:id="@+id/dialog_advancedSearch_video_length_min_edit_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dialog_advancedSearch_length_min_edit"
+                    android:id="@+id/dialog_advancedSearch_video_length_min_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Minimal"
@@ -252,14 +252,14 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dialog_advancedSearch_length_max_edit_layout"
+                android:id="@+id/dialog_advancedSearch_video_length_max_edit_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dialog_advancedSearch_length_max_edit"
+                    android:id="@+id/dialog_advancedSearch_video_length_max_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Maximal"
@@ -269,5 +269,146 @@
 
 
         </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="8dp"
+        android:background="?android:attr/listDivider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Kategorien"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:enabled="false"
+                android:text="Darsteller:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dialog_advancedSearch_video_actor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:fadingEdge="horizontal"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                tools:text="Darsteller1, Darsteller 2, Darsteller 3, Darsteller 4" />
+
+            <Spinner
+                android:id="@+id/dialog_advancedSearch_video_actor_connector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:entries="@array/logicConnectors" />
+
+            <ImageView
+                android:id="@+id/dialog_advancedSearch_video_editActor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="@drawable/ripple"
+                android:padding="5dp"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:enabled="false"
+                android:text="Studio:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dialog_advancedSearch_video_studio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/dialog_advancedSearch_video_studio_connector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:entries="@array/logicConnectors" />
+
+            <ImageView
+                android:id="@+id/dialog_advancedSearch_video_editStudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="@drawable/ripple"
+                android:padding="5dp"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="Genre:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dialog_advancedSearch_video_genre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/dialog_advancedSearch_video_genre_connector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:entries="@array/logicConnectors" />
+
+            <ImageView
+                android:id="@+id/dialog_advancedSearch_video_editGenre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="@drawable/ripple"
+                android:padding="5dp"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
