--- a/app/src/main/res/layout/list_item_bubble.xml
+++ b/app/src/main/res/layout/list_item_bubble.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -7,29 +9,41 @@
     android:clickable="true"
     android:elevation="2dp"
     android:foreground="@drawable/ripple"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:minWidth="100dp"
-    android:orientation="vertical"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="10dp">
+    android:paddingStart="10dp"
+    android:paddingEnd="20dp">
+
+    <ImageView
+        android:id="@+id/list_bubble_image"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:adjustViewBounds="true"
+        android:maxWidth="25dp"
+        android:minWidth="15dp"
+        android:visibility="gone"
+        tools:srcCompat="@drawable/simpsons_movie_poster"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/list_bubble_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginStart="10dp"
         android:text="Finn Flaschka" />
 
     <!--<TextView-->
-        android:id="@+id/userList_bubble_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ellipsize="marquee"
-        android:fadingEdge="horizontal"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
-        android:text="finn.flaschka@gmail.com" />
+<!--    android:id="@+id/userList_bubble_email"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_weight="1"-->
+<!--    android:ellipsize="marquee"-->
+<!--    android:fadingEdge="horizontal"-->
+<!--    android:focusable="true"-->
+<!--    android:focusableInTouchMode="true"-->
+<!--    android:marqueeRepeatLimit="marquee_forever"-->
+<!--    android:scrollHorizontally="true"-->
+<!--    android:singleLine="true"-->
+<!--    android:text="finn.flaschka@gmail.com" />-->
 </LinearLayout>
