--- a/app/src/main/res/layout/image_fragment.xml
+++ b/app/src/main/res/layout/image_fragment.xml
@@ -23,17 +23,17 @@
         tools:layout_height="250dp"
         tools:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/imageFragment_videoIndicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:alpha=".7"
-        android:scaleX="3"
-        android:scaleY="3"
-        android:visibility="gone"
-        app:srcCompat="@android:drawable/ic_media_play"
-        tools:visibility="visible" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageFragment_videoIndicator"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:alpha=".7"-->
+<!--        android:scaleX="3"-->
+<!--        android:scaleY="3"-->
+<!--        android:visibility="gone"-->
+<!--        app:srcCompat="@android:drawable/ic_media_play"-->
+<!--        tools:visibility="visible" />-->
 
     <FrameLayout
         android:id="@+id/imageFragment_videoButtonLayout"
