--- a/app/src/main/res/layout/scroll_gallery_view.xml
+++ b/app/src/main/res/layout/scroll_gallery_view.xml
@@ -38,6 +38,26 @@
             android:tint="#FFFFFF"
             app:srcCompat="@drawable/ic_edit" />
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/scrollGalleryView_rotate"
+        android:layout_width="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="65dp"
+        android:background="@drawable/round_background"
+        android:backgroundTint="#8B3C3C3C"
+        android:clickable="true"
+        android:padding="7dp"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            android:tint="#FFFFFF"
+            app:srcCompat="@drawable/ic_screen_rotation" />
+
+    </FrameLayout>
     <LinearLayout
         android:id="@+id/customImageDescription"
         android:layout_width="wrap_content"
@@ -55,12 +75,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
+        android:background="#66000000"
         android:layout_marginBottom="16dp"
         android:scrollbars="none">
 
         <LinearLayout
             android:id="@+id/thumbnails_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"></LinearLayout>
     </HorizontalScrollView>
