--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -28,7 +28,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/loading"
+            android:text="Laden..."
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#ffffff" />
     </LinearLayout>
@@ -36,7 +36,7 @@
     <FrameLayout
         android:id="@+id/videoPlayer_rotation"
         android:layout_width="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_gravity="end"
         android:background="@drawable/round_background"
