--- a/app/src/main/res/menu/task_bar_media.xml
+++ b/app/src/main/res/menu/task_bar_media.xml
@@ -8,11 +8,21 @@
         android:icon="@drawable/ic_add"
         android:title="Hinzufügen"
         app:showAsAction="always" />
+
     <item
         android:id="@+id/taskBar_media_edit"
         android:icon="@drawable/ic_edit"
         android:iconTint="#FFFFFF"
         android:title="Bearbeiten"
+        android:visible="false"
+        tools:visible="true"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/taskBar_media_share"
+        android:icon="@drawable/ic_share"
+        android:iconTint="#FFFFFF"
+        android:title="Teilen"
         android:visible="false"
         tools:visible="true"
         app:showAsAction="always" />
