--- a/app/src/main/res/layout/list_item_select_thumbnail.xml
+++ b/app/src/main/res/layout/list_item_select_thumbnail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:gravity="center_vertical"
     android:orientation="vertical">
 
 
@@ -19,9 +20,9 @@
         android:id="@+id/listItem_selectThumbnail_editLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:orientation="vertical"
         android:visibility="gone"
-        android:layout_margin="16dp"
         tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputLayout
